# agent-vision

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
brand/: social_agentvision.html
brand/space/: index.html
docs/: VISION.md  adapters.md  api.md  backends.md  cli.md  configuration.md  conformance.md  examples.md  faq.md  handoff.md  index.md  integrations.md  quickstart.md  recipes.md  scaling.md  security.md  the-loop.md  try-it.md  tutorial.md  use-cases.md
docs/stylesheets/: extra.css
docs/use-cases/: streaming.md
examples/: broken_layout.fixed.html  broken_layout.html  contact_sheet.py  fix_loop.py
integrations/: agent-contract.md  aider.md  cursor.rules.md
media/: before-after.html  hero.html  loop.html  reddit-post.md
skill/: SKILL.md
skill/scripts/: see.sh
src/agentvision/: __init__.py  config.py  errors.py  imageguard.py  logging.py  netguard.py  office.py  pathsafe.py  proxy.py  sources.py  workspace.py
src/agentvision/adapters/: __init__.py  _demo_assets.py  cli.py  doctor.py  mcp_server.py  rest.py
src/agentvision/backends/: __init__.py  _image.py  anthropic_backend.py  base.py  gemini_backend.py  local_backend.py  ollama_backend.py  openai_backend.py  prompt.py  registry.py  schema_adapters.py
src/agentvision/core/: __init__.py  analyze.py  baseline.py  capture.py  diff.py  generate.py  intent.py  loop.py  render.py  temporal.py  tiling.py  watch.py
src/agentvision/core/checks/: __init__.py  contrast.py  layout.py  slides.py  spelling.py
src/agentvision/models/: __init__.py  diff.py  geometry.py  handoff.py  intent.py  report.py
src/agentvision/ocr/: __init__.py  base.py  tesseract.py
src/agentvision/renderers/: __init__.py  _extract_js.py  base.py  image_renderer.py  office_renderer.py  pdf_renderer.py  playwright_renderer.py
tests/: test_version_consistency.py
tests/integration/: test_render_loop.py
tests/unit/: test_cli_render.py  test_clipped_text.py  test_ephemeral.py  test_field_report_fixes.py  test_generate.py  test_handoff.py  test_intent.py  test_local_backend.py  test_models.py  test_office.py  test_path_traversal_sinks.py  test_pathsafe.py  test_schema_adapters.py  test_security_images.py  test_security_proxy.py  test_security_renderer.py  test_security_rest.py  test_security_secrets.py  test_security_ssrf.py  test_slides.py  test_sources.py  test_spelling.py  test_temporal.py  test_tiling.py  test_workspace.py
