[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvision"
version = "0.2.0"
description = "Eyes for AI Agents — a machine-graded visual feedback loop coding agents consume to self-correct before claiming done."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["ai", "agents", "visual", "screenshot", "vision", "llm", "ui-testing", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pillow>=10.0",
    "numpy>=1.26",
    "scikit-image>=0.22",
    "typer>=0.12",
    "platformdirs>=4.0",
    "filelock>=3.13",
]

[project.optional-dependencies]
render = ["playwright>=1.44", "pdf2image>=1.17"]
ocr = ["pytesseract>=0.3.10", "pyspellchecker>=0.8"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
gemini = ["google-genai>=0.3"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.2"]
all = [
    "playwright>=1.44", "pdf2image>=1.17", "pytesseract>=0.3.10", "pyspellchecker>=0.8",
    "anthropic>=0.40", "openai>=1.40", "google-genai>=0.3",
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9",
    "mcp>=1.2",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/amitpatole/agent-vision"
Repository = "https://github.com/amitpatole/agent-vision"
Issues = "https://github.com/amitpatole/agent-vision/issues"

[project.scripts]
agentvision = "agentvision.adapters.cli:main"
agentvision-mcp = "agentvision.adapters.mcp_server:main"
agentvision-serve = "agentvision.adapters.rest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentvision"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "UP042"]  # keep explicit str+Enum for Pydantic compatibility

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
